# TheWired

./: .dockerignore  .env.example  .env.production.example  .env.test.example  .gitignore  ARCHITECTURE.md  AUDIO_UPGRADE.md  CHANGES-NIP44-DM.md  CLAUDE.md  FRIENDS.md  NOTIFICATIONS.md  README.md  REDESIGN.md  VOICE_VIDEO_PLAN.md  docker-compose.prod.yml  docker-compose.yml  nostr-event-reference.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  process-compose-shortcuts.yaml  process-compose.yaml  tsconfig.base.json
.github/workflows/: build-images.yml  linux-smoke-test.yml  release.yml  test.yml
client/: .env.production  .gitignore  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
client/e2e/: account-switch.spec.ts  happy-paths.spec.ts  login.spec.ts  profile.spec.ts  spaces.spec.ts
client/e2e/fixtures/: testUsers.ts
client/e2e/helpers/: login.ts  session.ts
client/e2e/support/: tauriKeystoreMock.ts
client/public/: splash.css  sw.js
client/src/: index.css  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json  localhost.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: cloudflared.rs  keystore.rs  lib.rs  nip44.rs  relay.rs  tunnel.rs
client/src/__tests__/fixtures/: testUsers.ts
client/src/__tests__/helpers/: createTestStore.ts  mockSigner.ts  renderWithProviders.tsx  waitForReduxState.ts
client/src/app/: App.tsx  Layout.tsx
client/src/components/: UpdateOverlay.tsx  ZoomIndicator.tsx
client/src/components/chat/: AttachmentPreview.tsx  EmojiPicker.tsx  GifPicker.tsx  GifPreview.tsx  ReactionPicker.tsx  UnreadDivider.tsx
client/src/components/content/: EmbedRenderer.tsx  EmbeddedNote.tsx  EmojiAutocomplete.tsx  FormattingToolbar.tsx  InlineMarkdown.tsx  InviteCard.tsx  MentionAutocomplete.tsx  MentionLink.tsx  MusicEmbedCard.tsx  RichContent.tsx  embedDepth.ts  useEmbeddedEvent.ts
client/src/contexts/: ThemeContext.tsx
client/src/hooks/: useAnchoredScrollRestore.ts  useAppUpdater.ts  useAutoResize.ts  useClickOutside.ts  useCustomEmojis.ts  useExternalLinkHandler.ts  useFileUpload.ts  useGifSearch.ts  useIsBlocked.ts  useMarkdownShortcuts.ts  useNavigationHistory.ts  useNearViewport.ts  usePlaybackBarSpacing.ts  usePlaybackSpeed.ts  useRelativeTime.ts  useScrollRestore.ts  useUnblock.ts  useVideoThumbnail.ts  useZoomShortcuts.ts
client/src/lib/: concurrencyPool.ts  fontLoader.ts  nip05Utils.ts  themeEngine.ts  themePresets.ts  themeTypes.ts  zoom.ts
client/src/store/: index.ts
client/src/styles/: theme.ts
client/src/types/: ai.ts  calling.ts  chat.ts  emoji.ts  media.ts  music.ts  nostr.ts  profile.ts  relay.ts  space.ts
client/src/workers/: verifyWorker.ts
config/: livekit.yaml
docs/: AI_ENGINE.md  AUDIO_UPGRADE.md  CHANGELOG-interactivity-upgrade.md  DECENTRALIZED_SPACES.md  DISCOVER_REMAINING_PHASES.md  E2EE_CALLS.md  KNOWN_ISSUES.md  NIP17_GROUP_ROOMS.md  NIP29_CHAT.md  RELAY_OPTIMIZATIONS.md
docs/nips/: NIP-XX-Friend-Requests.md
nips/: NIP-XX-Music-Events.md
services/backend/: .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
services/backend/src/: config.ts  index.ts  server.ts
services/backend/test/: setup.ts
services/gateway/: .env.example  Dockerfile  go.mod  go.sum
services/landing/: Caddyfile  Dockerfile  astro.config.mjs  package.json
services/landing/.astro/: settings.json
services/landing/public/: robots.txt
services/proxy/: Caddyfile
services/relay/: .dockerignore  .env.example  Cargo.toml  Dockerfile
services/relay/.cargo/: config.toml
services/relay/migrations/: 001_initial.sql  002_visibility_column.sql  003_tag_columns.sql
services/relay/src/: config.rs  connection.rs  lib.rs  main.rs  relay_identity.rs  server.rs
services/relay/src/db/: backend.rs  event_store.rs  group_store.rs  membership_source.rs  mod.rs  pool.rs  space_membership.rs  sqlite.rs  sqlite_groups.rs
services/relay/src/music/: kinds.rs
services/relay/src/nostr/: event.rs  filter.rs  membership_gate.rs  mod.rs  verify.rs
services/relay/src/nostr/nip29/: groups.rs  membership.rs  metadata.rs  mod.rs  moderation.rs
services/relay/src/protocol/: handler.rs  mod.rs  nip42.rs  nip50.rs  subscription.rs
services/relay/tests/: db_parity.rs  embedded_server.rs  membership_gate.rs  nip29_native.rs  stress_subs.rs
services/relay/tests/common/: mod.rs
(+891 files in other folders)
