[package]
name = "the-wired"
version = "0.1.0"
description = "Decentralized Nostr-native media platform"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
