[package]
name = "the-wired"
version = "0.1.0"
description = "Decentralized Nostr-native media platform"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chacha20 = "0.9"
hkdf = "0.12"
hmac = "0.12"
base64 = "0.22"
tauri-plugin-opener = "2"
tauri-plugin-http = "2.5.7"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"

# macOS: native keychain with Touch ID biometric access control
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

# Windows/Linux: keyring fallback
[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["windows-native", "sync-secret-service"] }
